@@ -1,3 +1,8 @@
+Changes in @NEW@:
+  o Bug Fixes:
+    * PGP passphrases, required for signing troves, are now fetched
+      using a callback. (CNY-3189)
+
 Changes in 2.0.45:
   o New Features:
     * The standalone Conary repository server now prints a message if
